# pymtech_docker

./: .env  .gitignore  Dockerfile  Dockerfile3  README.MD  deploy.py  docker-compose.yml  docker.py  docker.yml  entrypoint.sh  odoo.Dockerfile  permissions.sh  pyproject.toml  requirements.txt
addons/: requirements.txt
ansible_config/: docker-playbook.yml
config/: odoo.conf  postgresql.conf
gestion_loxika/: .env  docker-compose.yml
labels/: labels-dev.yml
nginx/: Dockerfile  docker-compose.yml
odoo/: .env  Dockerfile  commands.py  deploy.py  deploy.sh  docker-compose.yml  labels-dev.yml  odoo.Dockerfile  printers.py  requirements.txt  setup.py
odoo/addons/: requirements.txt
odoo/cache/: addons_cache.json  cached.env
odoo/config/: odoo.conf
odoo/labels/: labels-prod.yml
odoo/odoo.egg-info/: PKG-INFO  SOURCES.txt
odoo/services/: __init__.py  commands.py  file_operations.py  printers.py  startup_validator.py
odoo16_eaac/: .env  docker-compose.yml
odoo16_eaac/addons/: requirements.txt
odoo16_eaac/config/: odoo.conf
odoo16_personal/: .env  Dockerfile
odoo18_personal/: .env  Dockerfile  docker-compose.yml
odoo2/: docker-compose.yml
odoo_docker/: Dockerfile  docker-compose.yml
odoo_docker/odoo/: Dockerfile  wait-for-db.sh
odoo_docker_setup/: docker-compose.yml
odoo_personal/: docker-compose.yml
odoo_personal/config/: odoo.conf
services/: commands.py  config_manager.py  constants.py  containers.py  database_creator.py  file_operations.py  module_manager.py  startup_validator.py  traefik_configurator.py
traefik/: docker-compose.yml
(+502 files in other folders)
